# openclaw-threads-cli

./: Cargo.toml  README.md
.github/: copilot-instructions.md
.github/workflows/: release.yml
config/: config.toml.example
docs/superpowers/specs/: 2026-03-28-discovery-and-engagement-design.md  2026-03-30-publish-form-encoding-design.md
src/: client.rs  config.rs  error.rs  main.rs  output.rs  tracing_setup.rs
src/cli/: account.rs  activity.rs  attempts.rs  auth.rs  config.rs  doctor.rs  log.rs  me.rs  mod.rs  post.rs  publish.rs  search.rs  validation.rs
src/store/: migrations.rs  mod.rs
tests/: config_tests.rs  store_tests.rs  validation_tests.rs
