[package]
name = "threads-cli"
version = "0.1.3"
edition = "2021"
description = "Rust CLI client for Threads API publishing and monitoring workflows"

[dependencies]
anyhow = "1.0"
axum = "0.7"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shellexpand = "3.1"
thiserror = "2.0"
tokio = { version = "1.38", features = ["macros", "rt-multi-thread", "signal", "net", "time"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2.5"
uuid = { version = "1.10", features = ["v4", "serde"] }
webbrowser = "1.0"

[dev-dependencies]
tempfile = "3.11"
